<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameText"></TextView>

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="60pt"
            android:layout_height="wrap_content"></EditText>

        <TextView
            android:id="@+id/sexText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexText"></TextView>

        <EditText
            android:id="@+id/sexEdit"
            android:layout_width="60pt"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:text="@string/question1" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/Windows_XPButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Windows_XP" />

        <RadioButton
            android:id="@+id/Windows_7Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Windows_7" />

        <RadioButton
            android:id="@+id/LinuxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Linux" />

        <RadioButton
            android:id="@+id/Mac_OSButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mac_OS" />
    </RadioGroup>
</RelativeLayout>
